--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,124 +5,152 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.leboys.currencyconverter.MainActivity"
-    android:background="@drawable/backgroundforCC"
+
     >
 
     <EditText
         android:id="@+id/inputAmount"
-        android:layout_width="252dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="95dp"
-        android:layout_marginEnd="143dp"
-        android:layout_marginBottom="460dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="40dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="@string/enter_amount"
         android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info1" />
+
+    <TextView
+        android:id="@+id/output"
+        android:layout_width="325dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="28dp"
+        android:clickable="false"
+        android:ems="10"
+        android:gravity="left|center_vertical"
+        android:textSize="16sp"
+        android:hint="@string/result"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirm"
+        app:layout_constraintVertical_bias="0.31" />
+
+    <TextView
+        android:id="@+id/info1"
+        android:layout_width="364dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="17dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/please_enter_the_input_amount_and_select_the_currency"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info_view" />
 
     <Spinner
         android:id="@+id/inputSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="159dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="450dp"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="400dp"
+        android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/inputAmount"
-        app:layout_constraintTop_toBottomOf="@+id/info_view" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/outputSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="181dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="182dp"
-        android:layout_marginBottom="270dp"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="250dp"
+        android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/info2" />
+        app:layout_constraintTop_toBottomOf="@+id/info2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/info_view"
         android:layout_width="274dp"
         android:layout_height="45dp"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="81dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="69dp"
-        android:layout_marginBottom="82dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/currency_converter"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:gravity="center_horizontal|center_vertical"
-        app:layout_constraintBottom_toTopOf="@+id/inputAmount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/info1"
-        android:layout_width="202dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="111dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="45dp"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="@string/please_enter_the_input_amount_and_select_the_currency"
-        app:layout_constraintBottom_toTopOf="@+id/inputAmount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/info_view" />
-
-    <TextView
         android:id="@+id/info2"
-        android:layout_width="199dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="106dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="106dp"
-        android:layout_marginBottom="35dp"
-        android:text="@string/please_select_the_currency_for_you_want_to_convert_to"
+        android:layout_width="357dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginBottom="320dp"
         android:gravity="center_horizontal|center_vertical"
-        app:layout_constraintBottom_toTopOf="@+id/outputSpinner"
+        android:textSize="16sp"
+        android:text="@string/please_select_the_currency_for_you_want_to_convert_to"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputAmount" />
+        app:layout_constraintTop_toBottomOf="@+id/inputSpinner"
+        app:layout_constraintVertical_bias="0.178" />
 
     <Button
         android:id="@+id/confirm"
-        android:layout_width="202dp"
+        android:layout_width="0dp"
         android:layout_height="53dp"
-        android:layout_marginStart="106dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginBottom="200dp"
         android:text="@string/confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outputSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/outputSpinner"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/output"
-        android:layout_width="325dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="53dp"
-        android:ems="10"
-        android:hint="@string/result"
-        android:inputType="numberDecimal"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="366dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="450dp"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:text="@string/please_select_currency"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirm" />
+        app:layout_constraintTop_toBottomOf="@+id/inputAmount"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
