--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,4 +153,18 @@
         app:layout_constraintTop_toBottomOf="@+id/inputAmount"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/exchange_rates"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="133dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="134dp"
+        android:layout_marginBottom="16dp"
+        android:text="EXCHANGE RATES"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/output" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
