CurrencyExchange: Implemented class --> Added/Fixed helper functions in CurrencyUtils class (written by myself) to deal with the new added class. --> Rearrange UI created by Sriram Varma to further accommodate the class created by Shohom DasGupta. --> Accounted for exceptions and other regressions. --> Changed App Icon files as Old Image Assets couldn't be loaded for some reason. --> Removed Opening Activity as it seemed redundant given that we're only calculating and converting the currency.
Signed-off-by: Panav Munshi <panav.munshi@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.leboys.currencyconverter.MainActivity"
-
-    >
+    tools:context="com.leboys.currencyconverter.MainActivity">
 
     <EditText
         android:id="@+id/inputAmount"
@@ -27,21 +25,19 @@
     <TextView
         android:id="@+id/output"
         android:layout_width="325dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginBottom="28dp"
         android:clickable="false"
         android:ems="10"
         android:gravity="left|center_vertical"
-        android:textSize="16sp"
         android:hint="@string/result"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirm"
-        app:layout_constraintVertical_bias="0.31" />
+        app:layout_constraintTop_toBottomOf="@+id/confirm" />
 
     <TextView
         android:id="@+id/info1"
@@ -63,32 +59,26 @@
         android:layout_width="0dp"
         android:layout_height="41dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="400dp"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Spinner
         android:id="@+id/outputSpinner"
         android:layout_width="0dp"
         android:layout_height="41dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="250dp"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/info2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/info2" />
 
     <TextView
         android:id="@+id/info_view"
@@ -108,62 +98,52 @@
         android:id="@+id/info2"
         android:layout_width="357dp"
         android:layout_height="53dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginBottom="320dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal|center_vertical"
-        android:textSize="16sp"
         android:text="@string/please_select_the_currency_for_you_want_to_convert_to"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputSpinner"
-        app:layout_constraintVertical_bias="0.178" />
+        app:layout_constraintTop_toBottomOf="@+id/inputSpinner" />
 
     <Button
         android:id="@+id/confirm"
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginStart="140dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="140dp"
-        android:layout_marginBottom="200dp"
         android:text="@string/confirm"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outputSpinner"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/outputSpinner" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="366dp"
         android:layout_height="39dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="450dp"
         android:gravity="center"
-        android:textSize="16sp"
         android:text="@string/please_select_currency"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputAmount"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/inputAmount" />
 
     <Button
         android:id="@+id/exchange_rates"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="133dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="134dp"
-        android:layout_marginBottom="16dp"
-        android:text="EXCHANGE RATES"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Click Here to View Historic Rates"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/output" />
 
